# sway-systemd

./: README.md  meson.build  meson_options.txt
src/: assign-cgroups.py  session.sh
srpm/: sway-systemd.spec.rpkg
units/: sway-session.target  wait-sni-ready.service.in
